Fixed bugs with special report series highlight
- Removed padding, used box-shadow instead
- Tweaked line height to prevent overlap with section
- Applied to dark mode as well

--- a/ArticleTemplates/assets/scss/themes/darkMode/_darkModeSpecialReport.scss
+++ b/ArticleTemplates/assets/scss/themes/darkMode/_darkModeSpecialReport.scss
@@ -18,7 +18,7 @@
 
         &:not(.garnett--type-media) .article-kicker__highlight {
             background: $ratingYellow;
-            box-shadow: 0 0 0 2px $ratingYellow;
+            box-shadow: 2px 0 $ratingYellow, -2px 0 $ratingYellow;
             color: $blackThree;
         }
 
